<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".presentation.signIn.SignInFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_title_first_line"
            style="@style/Text_32_ExtraBold.Black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="40dp"
            android:text="@string/sign_in_title_first_line"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="반려동물과 함께" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_title_second_line"
            style="@style/Text_32_ExtraBold.Black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="1dp"
            android:text="@string/sign_in_title_second_line"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_title_first_line"
            tools:text="여행지 선택은" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_third_line"
            style="@style/Text_32_ExtraBold.Green"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="1dp"
            android:text="@string/sign_in_title_third_line"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_title_second_line"
            tools:text="여행필독서" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/iv_representative_image"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="10dp"
            android:src="@drawable/img_login_background"
            app:layout_constraintBottom_toTopOf="@id/btn_sign_in"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_third_line" />


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_sign_in"
            style="@style/Text_14_Regular.White"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginEnd="12dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/bg_request_btn_green"
            android:padding="16dp"
            android:stateListAnimator="@null"
            android:text="@string/request_btn_sign_in"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/iv_representative_image" />

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/lav_loading"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:background="@color/transparent"
            app:lottie_fileName="circular_loading.json"
            app:lottie_autoPlay="false"
            app:lottie_loop="true"
            android:visibility="invisible"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>